# rust-api-gateway

./: .dockerignore  API_DOCS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  HEALTH_CHECKS_GUIDE.md  HEALTH_CHECKS_IMPLEMENTATION.md  HEALTH_CHECKS_QUICK_REFERENCE.md  JWT_CHECKLIST.md  JWT_COMPLETE_SUMMARY.md  JWT_FILES_REFERENCE.md  JWT_IMPLEMENTATION.md  JWT_SETUP.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_IMPLEMENTATION.md  OBSERVABILITY_QUICK_REFERENCE.md  RATE_LIMITING_GUIDE.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_QUICK_REFERENCE.md  README.md  prometheus-scrape-config.yml  render.yaml
config/: config.toml
examples/: generate_jwt_token.rs
src/: error.rs  lib.rs  main.rs
src/config/: loader.rs
src/health/: checker.rs  mod.rs  registry.rs
src/load_balancer/: mod.rs  round_robin.rs
src/middleware/: auth.rs  logger.rs  mod.rs  rate_limiter.rs
src/observability/: metrics.rs  mod.rs  tracing_config.rs
src/proxy/: mod.rs  reverse_proxy.rs
src/router/: router.rs
src/server/: http_server.rs  mod.rs
