[package]
name = "rust-api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hyper = { version = "1.9.0", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
http-body = "0.4"

# Logging + middleware
tower = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["protobuf"] }
once_cell = "1.19"

# JWT Authentication
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# Health checks
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
